

[package]
name    = "gf_core"
version = "0.1.0"
authors = ["Ivan Trajkovic"]
edition = "2018"

#-------------------------------
[lib]
name = "gf_core"

# rlib - Rust lib, needed for other libs to be able to link this lib into them properly.
#        currently needed for gf_images_jobs_py cpython lib.
crate-type = ["dylib", "rlib"]

#-------------------------------
[dependencies]
image    = "0.21.3"
png      = "0.14.0"
cairo-rs = {features=["png"]} # 2D drawing

# TensorFlow .tfrecord file writing uses protobuffers to serialize binary data
protobuf = "" # "2"

# TENSORFLOW
tensorflow = "0.15.0"
# tensorflow = {git = "https://github.com/tensorflow/rust"}

#-------------------------------
# dependencies of the build.rs pre-process stage
[build-dependencies]

# TensorFlow .tfrecord file writing uses protobuffers to serialize binary data
protoc-rust = "2.8.0"