

[package]
name    = "gf_data_viz"
version = "0.1.0"
authors = ["Ivan Trajkovic"]
edition = "2018"

#-------------------------------
[lib]
name = "gf_data_viz"

# rlib - Rust lib, needed for other libs to be able to link this lib into them properly.
#        currently needed for gf_images_jobs_py cpython lib.
crate-type = ["dylib", "rlib"]

#-------------------------------
[dependencies]
rand       = {}                 # random number generator
image      = {}
png        = {}                 # PNG image support
cairo-rs   = {features=["png"]} # 2D drawing
tensorflow = "0.14.0"
gf_core    = {path="../gf_core", version="0.1.0"}