

[package]
name    = "gf_images_jobs_py"
version = "0.1.0"
authors = ["Ivan Trajkovic <ivan.ebiz@gmail.com>"]
edition = "2018"

#-------------------------------
[lib]
name = "gf_images_jobs_py"

# "dylib" - compile .so lib (dynamic) for loading into Py VM
crate-type = ["dylib"]

#-------------------------------
[dependencies]
cpython        = "0.4"
gf_images_jobs = {path="../gf_images_jobs", version="0.1.0"}

#-------------------------------
# [dependencies.cpython]
# default-features = false
# # python 2.7 extension
# features = ["extension-module-2-7", "python27-sys"]