

[package]
name    = "gf_images_jobs_py"
version = "0.1.0"
authors = ["Ivan Trajkovic <ivan.ebiz@gmail.com>"]
edition = "2018"

#-------------------------------
[lib]
name = "gf_images_jobs_py"

# "dylib" - compile .so lib (dynamic) for loading into Py VM
crate-type =["dylib"]

# "staticlib" - compile statically to include all the dependency libs
#               for deployments into other Linux distros (Alpine, etc.)
# crate-type = ["staticlib"] 

#-------------------------------
[dependencies]
gf_core        = {path="../gf_core",        version="0.1.0"}
gf_ml          = {path="../gf_ml",          version="0.1.0"}
gf_images_jobs = {path="../gf_images_jobs", version="0.1.0"}
numpy   = "0.15.1" # "0.16" latest version
ndarray = "0.15.4" # "0.15.4" latest version
image   = "0.21.1"

#-------------------------------
[dependencies.pyo3]

# FIX!! - upgrade to latest version of pyo3
version  = "0.15.1" # "0.10.1"

features = ["extension-module"]

#-------------------------------
# [dependencies.cpython]
# default-features = false
# # python 2.7 extension
# features = ["extension-module-2-7", "python27-sys"]