

[package]
name    = "gf_ml"
version = "0.1.0"
authors = ["Ivan Trajkovic"]
edition = "2018"

#-------------------------------
[lib]
name = "gf_ml"

# rlib - Rust lib, needed for other libs to be able to link this lib into them properly.
#        currently needed for gf_images_jobs_py cpython lib.
crate-type = ["dylib", "rlib"]

#-------------------------------
[dependencies]
rand     = {}                 # random number generator
image    = "0.21.3"
png      = "0.14.0"           # PNG image support
cairo-rs = {features=["png"]} # 2D drawing
gf_core  = {path="../gf_core", version="0.1.0"}

# IMPORTANT!! - "0.14.0" doesnt contain some of the tensorflow::io functions that I need,
#               but which are present in the main repo "master" branch. 
#               so until a "0.15.0" crate is released, we have to link directly to the 
#               github repo to use the latest version of the code.
# tensorflow = "0.14.0
tensorflow = {git = "https://github.com/tensorflow/rust"} # "0.14.0

# HTTP_CLIENT
# Linux requirement: OpenSSL 1.0.1, 1.0.2, or 1.1.0 with headers
reqwest = { version = "0.10", features = ["blocking", "json"] }